--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link href="style.css" rel="stylesheet">
         <script src="main.js"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-         <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <title>Case Study</title>
     </head>
@@ -12,10 +12,28 @@
     <h1>Welcome, <br><br>
         This a Case Study between Google Lens and Mobile Net Image Identification.
     </h1>
-    <img class=" img1 col-lg-6 col-sm-6 col-md-6 col-xs-6" src="" >
-    <img src="" class=" img2 col-lg-6 col-sm-6 col-md-6 col-xs-6">
-    <h3 class=" header1 col-lg-6 col-sm-6 col-md-6 col-xs-6"></h3>
-    <h3 class=" header2 col-lg-6 col-sm-6 col-md-6 col-xs-6"></h3>
-   
+    <center>
+    <img class=" img1 col-lg-12 col-sm-12 col-md-12 col-xs-12" src="img1.png" >
+    <br>
+
+  <h3 class=" header1 col-lg-12 col-sm-12 col-md-12 col-xs-12">Google Lens identified the mouse as itself and also gave me the correct model number of the mouse and other details <br><br> On the other hand MobileNet also gave me the correct answer 'Mouse'.  But the answer also changed onto other objects such as speakers and speaker sets. MobileNet does not focus on the specific details on the objects to give the model number or the object manufacturer name, it focuses on identifiying general objects<br><br> Google = 1 1/2, MobileNet = 1</h3>
+
+  <img class=" img2 col-lg-12 col-sm-12 col-md-12 col-xs-12" src="img2.jpg">
+  <br>
+  <h3 class=" header2 col-lg-12 col-sm-12 col-md-12 col-xs-12">Google Lens identified the keyboard as itself and same as lastime, it gave me the correct model number of the keyboard and other details <br><br> On the other hand MobileNet also gave me the correct answer 'Keyboard'.  Same as last time,  the answer also changed onto other objects. <br><br> Google = 1 1/2, MobileNet = 1</h3>
+  <br>
+  <img class=" img3 col-lg-12 col-sm-12 col-md-12 col-xs-12" src="img3.jpg">
+  <br>
+      <h3 class=" header3 col-lg-12 col-sm-12 col-md-12 col-xs-12">Google Lens identified the Mobile Phone as itself and same as lastime, it gave me the correct model number of the Phone and other details <br><br> On the other hand MobileNet also gave me the correct answer 'Mobile Phone'.  Same as last time,  the answer also changed onto other objects. <br><br> Google = 1 1/2, MobileNet = 1</h3>
+      <br>
+      <img class=" img4 col-lg-12 col-sm-12 col-md-12 col-xs-12" src="laptop.jpg">
+  <br>
+      <h3 class=" header4 col-lg-12 col-sm-12 col-md-12 col-xs-12">Google Lens identified the Laptop as itself <br><br> On the other hand MobileNet also gave me the correct answer 'Mobile Phone'.  Same as last time,  the answer also changed onto other objects. <br><br> Google = 1, MobileNet = 1</h3>
+
+   <br>
+   <h2 id="h21">Conclusion<br><br>
+   Google Lens has outperformed MobileNet by 5 1/2 points. Google Lens is more Accurate Than MobileNet .  Google lens has more focus on details which helps to identify the manufacturer and other details of the object. Whereas MobileNet only identifies the objects generally without more specific details.</h2>
+    </center>
+
     </body>
 </html>
